# rotary_guestbook

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  README.md  config.yaml.example  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  rotary_guestbook.service  rotary_guestbook_webserver.service  rsync-exclude.txt  setup.cfg  start.sh  start_server.sh
.github/workflows/: ci.yml
docs/: development.md  hardware.md  software.md
llm_resources/: coding_guidelines.md  context.md  refactoring_plan.md
src/: audioGuestBook.py
src/guestbook/: audioGuestBook.py  errors.py
src/rotary_guestbook/: __init__.py  app.py  archive.py  audio.py  audioGuestBook.py  audioInterface.py  config.py  errors.py  logger.py  phone.py
test/: test_server.py
tests/: conftest.py
tests/integration/: test_audio_hw.py
tests/unit/: test_app.py  test_archive.py  test_audio.py  test_audio_guestbook.py  test_audio_interface.py  test_config.py  test_errors.py  test_logger.py
webserver/: postcss.config.js  server.py  tailwind.config.js
webserver/static/css/: output.css  output.min.css  tailwind.css
webserver/static/js/: menu.js  recordings.js  theme.js
webserver/templates/: base.html  config.html  index.html
