[metadata]
name = rotary-guestbook
version = 0.1.0
description = A rotary phone audio guestbook system
long_description = file: README.md
long_description_content_type = text/markdown
author = Scott Kostolni
author_email = scott.kostolni@gmail.com
url = https://github.com/scottkostolni/rotary_guestbook
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Multimedia :: Sound/Audio
    Topic :: Home Automation

[options]
packages = find:
python_requires = >=3.10
install_requires =
    flask>=3.0.0
    pyaudio>=0.2.13
    pydub>=0.25.1
    ruamel.yaml>=0.18.6
    gpiozero>=2.0
    pytest>=7.4.0
    pytest-cov>=4.1.0
    pytest-mock>=3.12.0
    mypy>=1.8.0
    black>=24.2.0
    isort>=5.13.2
    flake8>=7.0.0
    interrogate>=1.6.0
    pre-commit>=3.6.0

[options.packages.find]
where = src
exclude = tests*

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-cov>=4.1.0
    pytest-mock>=3.12.0
    mypy>=1.8.0
    black>=24.2.0
    isort>=5.13.2
    flake8>=7.0.0
    interrogate>=1.6.0
    pre-commit>=3.6.0 